--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Champions.of.the.C.U.B.E.
 nav:
   - Home: index.md
-  - Getting Started
+  - Getting Started:
     - Requriements: 'Getting started/Requriements.md'
     - Installation: 'Getting started/Installation.md'
   - Structure and models:
